busy-sign: fixing z-index was making the busy sign go above dropdown menus

--- a/app/modules/inventory/scss/_item_container.scss
+++ b/app/modules/inventory/scss/_item_container.scss
@@ -14,7 +14,7 @@
     position: relative;
     .busy-sign{
       opacity: 1;
-      z-index: 100;
+      z-index: 1;
       @include position(absolute, 0, 0);
       background-color: #222;
       height: 2em;
